Bug 355395 - Misspelled words in text areas cause all following text to disappear during print, r+sr=roc