editor/libeditor/base/nsEditor.cpp
@@ -466,6 +466,15 @@ nsEditor::GetDesiredSpellCheckState()
     return PR_FALSE;
   }
 
+  nsCOMPtr<nsIPresShell> presShell;
+  rv = GetPresShell(getter_AddRefs(presShell));
+  if (NS_SUCCEEDED(rv)) {
+    nsPresContext* context = presShell->GetPresContext();
+    if (context && !context->IsDynamic()) {
+        return PR_FALSE;
+    }
+  }
+
   // Check DOM state
   nsCOMPtr<nsIContent> content = do_QueryInterface(GetRoot());
   if (!content) {
